WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
126832
[WebGL] Error messages for attributes, uniforms, and varyings should use source code symbols, not internal mangled symbols
https://bugs.webkit.org/show_bug.cgi?id=126832
Summary
[WebGL] Error messages for attributes, uniforms, and varyings should use sour...
Brent Fulgham
Reported
2014-01-11 19:54:02 PST
While working on another bug, I noticed that the error messages we generate for linker errors for our shaders reports the mapped symbol name (i.e., the mangled ANGLE name). We should use the actual variable name from the source file when reporting a problem to the user. Instead of this: [Log] *** Error linking program '[object WebGLProgram]':ERROR: Input of fragment shader 'webgl_a78e73e400000001' not written by vertex shader (glsl-conformance-test.js, line 44) We should report: [Log] *** Error linking program '[object WebGLProgram]':ERROR: Input of fragment shader 'v_varying' not written by vertex shader (glsl-conformance-test.js, line 44)
Attachments
Patch
(11.03 KB, patch)
2014-01-11 23:32 PST
,
Brent Fulgham
no flags
Details
Formatted Diff
Diff
Revised to help EFL/GTK to build properly
(11.05 KB, patch)
2014-01-11 23:51 PST
,
Brent Fulgham
dino
: review+
eflews.bot
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2014-01-11 19:54:31 PST
<
rdar://problem/15800348
>
Brent Fulgham
Comment 2
2014-01-11 22:11:39 PST
While working on this issue I discovered that we were not building a symbol table for varyings, and that the encoder would crash when asked to process a varying because of a missing 'break'.
Brent Fulgham
Comment 3
2014-01-11 23:32:47 PST
Created
attachment 220961
[details]
Patch
WebKit Commit Bot
Comment 4
2014-01-11 23:34:16 PST
Attachment 220961
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/fast/canvas/webgl/glsl-conformance-expected.txt', u'LayoutTests/fast/canvas/webgl/glsl-conformance.html', u'Source/WebCore/ChangeLog', u'Source/WebCore/platform/graphics/ANGLEWebKitBridge.cpp', u'Source/WebCore/platform/graphics/GraphicsContext3D.h', u'Source/WebCore/platform/graphics/opengl/GraphicsContext3DOpenGLCommon.cpp', '--commit-queue']" exit_code: 1 ERROR: Source/WebCore/platform/graphics/opengl/GraphicsContext3DOpenGLCommon.cpp:1347: Wrong number of spaces before statement. (expected: 8) [whitespace/indent] [4] ERROR: Source/WebCore/platform/graphics/opengl/GraphicsContext3DOpenGLCommon.cpp:1349: Wrong number of spaces before statement. (expected: 8) [whitespace/indent] [4] ERROR: Source/WebCore/platform/graphics/opengl/GraphicsContext3DOpenGLCommon.cpp:1347: Wrong number of spaces before statement. (expected: 8) [whitespace/indent] [4] ERROR: Source/WebCore/platform/graphics/opengl/GraphicsContext3DOpenGLCommon.cpp:1349: Wrong number of spaces before statement. (expected: 8) [whitespace/indent] [4] Total errors found: 4 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
EFL EWS Bot
Comment 5
2014-01-11 23:38:28 PST
Comment on
attachment 220961
[details]
Patch
Attachment 220961
[details]
did not pass efl-ews (efl): Output:
http://webkit-queues.appspot.com/results/6046675881689088
Brent Fulgham
Comment 6
2014-01-11 23:47:32 PST
This bug was introduced by
http://trac.webkit.org/changeset/156352
, when we turned on the ANGLE name mangling.
Brent Fulgham
Comment 7
2014-01-11 23:51:12 PST
Created
attachment 220963
[details]
Revised to help EFL/GTK to build properly
WebKit Commit Bot
Comment 8
2014-01-11 23:54:22 PST
Attachment 220963
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/fast/canvas/webgl/glsl-conformance-expected.txt', u'LayoutTests/fast/canvas/webgl/glsl-conformance.html', u'Source/WebCore/ChangeLog', u'Source/WebCore/platform/graphics/ANGLEWebKitBridge.cpp', u'Source/WebCore/platform/graphics/GraphicsContext3D.h', u'Source/WebCore/platform/graphics/opengl/GraphicsContext3DOpenGLCommon.cpp', '--commit-queue']" exit_code: 1 ERROR: Source/WebCore/platform/graphics/opengl/GraphicsContext3DOpenGLCommon.cpp:1347: Wrong number of spaces before statement. (expected: 8) [whitespace/indent] [4] ERROR: Source/WebCore/platform/graphics/opengl/GraphicsContext3DOpenGLCommon.cpp:1349: Wrong number of spaces before statement. (expected: 8) [whitespace/indent] [4] ERROR: Source/WebCore/platform/graphics/opengl/GraphicsContext3DOpenGLCommon.cpp:1347: Wrong number of spaces before statement. (expected: 8) [whitespace/indent] [4] ERROR: Source/WebCore/platform/graphics/opengl/GraphicsContext3DOpenGLCommon.cpp:1349: Wrong number of spaces before statement. (expected: 8) [whitespace/indent] [4] Total errors found: 4 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
EFL EWS Bot
Comment 9
2014-01-12 05:44:56 PST
Comment on
attachment 220963
[details]
Revised to help EFL/GTK to build properly
Attachment 220963
[details]
did not pass efl-wk2-ews (efl-wk2): Output:
http://webkit-queues.appspot.com/results/6202724660019200
Dean Jackson
Comment 10
2014-01-12 13:34:12 PST
Comment on
attachment 220963
[details]
Revised to help EFL/GTK to build properly View in context:
https://bugs.webkit.org/attachment.cgi?id=220963&action=review
> Source/WebCore/platform/graphics/ANGLEWebKitBridge.cpp:63 > case SH_VARYINGS: > symbolMaxNameLengthType = SH_VARYING_MAX_LENGTH; > + break;
Ouch! :)
Brent Fulgham
Comment 11
2014-01-12 17:19:53 PST
(In reply to
comment #9
)
> (From update of
attachment 220963
[details]
) >
Attachment 220963
[details]
did not pass efl-wk2-ews (efl-wk2): > Output:
http://webkit-queues.appspot.com/results/6202724660019200
The error is not related to this patch: [ 19%] Building CXX object Source/WebCore/CMakeFiles/WebCore.dir/__/__/DerivedSources/WebCore/JSOESElementIndexUint.cpp.o c++: internal compiler error: Killed (program cc1plus) Please submit a full bug report,
Brent Fulgham
Comment 12
2014-01-12 17:22:13 PST
Committed
r161843
: <
http://trac.webkit.org/changeset/161843
>
WebKit Commit Bot
Comment 13
2014-01-12 22:21:48 PST
Re-opened since this is blocked by
bug 126871
Brent Fulgham
Comment 14
2014-01-13 10:17:51 PST
Committed
r161889
: <
http://trac.webkit.org/changeset/161889
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug