[WebGL] Error messages should use source code labels, not internal mangled symbols. https://bugs.webkit.org/show_bug.cgi?id=126832

Reviewed by Dean Jackson.

Source/WebCore:

Revised fast/canvas/webgl/glsl-conformance.html.

* platform/graphics/ANGLEWebKitBridge.cpp:
(WebCore::getSymbolInfo): Correct missing 'break'.
(WebCore::ANGLEWebKitBridge::compileShaderSource): Call 'getSymbolInfo'
for SH_VARYINGS.
* platform/graphics/GraphicsContext3D.h: Add new declarations.
* platform/graphics/opengl/GraphicsContext3DOpenGLCommon.cpp:
(WebCore::GraphicsContext3D::compileShader): Demangle log output.
(WebCore::GraphicsContext3D::mappedSymbolName): Added.
(WebCore::GraphicsContext3D::getUnmangledInfoLog): Added.
(WebCore::GraphicsContext3D::getProgramInfoLog): Demangle log output.
(WebCore::GraphicsContext3D::getShaderInfoLog): Demangle log output.

LayoutTests:

* fast/canvas/webgl/glsl-conformance.html: Add log to program output
showing error message to confirm proper labels are being used.
* fast/canvas/webgl/glsl-conformance-expected.txt: updated.


Canonical link: https://commits.webkit.org/144842@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@161843 268f45cc-cd09-0410-ab3c-d52691b4dbfc